<?xml version="1.0" encoding="utf-8"?>
<!-- Relative layout as parent layout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">



    <!-- Linear layout to contain all the
        editText, password , logo and button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:layout_centerInParent="true">

        <!-- Imageview displaying the logo
                or name of the application-->
        <ImageView
            android:layout_width="147dp"
            android:layout_height="82dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/kefa_logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="12dp"
                android:singleLine="true"
                android:layout_marginTop="22dp"
                android:hint="@string/fullname"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:background="@drawable/background_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mail_input_layout"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:layout_marginTop="22dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:background="@drawable/background_edit_text" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_input_layout"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:layout_marginTop="22dp"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:background="@drawable/background_edit_text" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


        </LinearLayout>



        <!-- Edit text provided to write
            password (according to instagram UI)-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwd_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="12dp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:hint="@string/passwd"
                android:inputType="textPassword"
                android:background="@drawable/background_edit_text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter a 6 digit pin"
            android:textSize="14sp"/>

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="30dp"
            app:pinHeight="30dp"
            app:pinLength="6"
            app:hint="*"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            app:password="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">


            <CheckBox
                android:id="@+id/accept_chkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/darkgrey"
                android:layout_marginTop="15dp"
                android:text="@string/terms" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/agree"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:onClick="showTerms"
                android:clickable="true"
                android:background="@color/white"/>


        </LinearLayout>
        <!-- material button is used to display the "Login" button to user-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:padding="12dp"
            android:onClick="register"
            android:backgroundTint="#3897f0"
            android:background="@drawable/rounded_button"/>




        <ProgressBar
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_progress" />

    </LinearLayout>





</RelativeLayout>
