<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".BuyActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/amount_naira"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginBottom="-0.25dp"
            android:background="@drawable/bg_buy_edittext"
            android:hint="@string/amount"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:ignore="LabelFor,NegativeMargin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/wallet_address"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginBottom="-0.25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_buy_edittext"
                android:hint="@string/walletAddress"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="LabelFor,NegativeMargin" />


            <ImageButton
                android:id="@+id/scan_qr"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-0.25dp"
                android:background="@drawable/bg_scan_btn"
                android:onClick="scanQRCode"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_qr_code" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="Enter PIN"
            android:textSize="14dp"
            android:textStyle="bold"/>


        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            app:pinBackground="@drawable/bg_buy_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="35dp"
            app:pinHeight="35dp"
            app:pinLength="6"
            app:hint="*"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            app:password="true"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buy_progress"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/pay_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/pay" />

</RelativeLayout>

