<?xml version="1.0" encoding="utf-8"?>
<!-- Relative layout as parent layout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">



    <!-- Linear layout to contain all the
        editText, password , logo and button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:layout_centerInParent="true">

        <!-- Imageview displaying the logo
                or name of the application-->
        <ImageView
            android:layout_width="147dp"
            android:layout_height="82dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/kefa_logo" />

        <!-- Edit text provided to user to
            enter email, username or phone no.-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="12dp"
                android:singleLine="true"
                android:layout_marginTop="22dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:background="@drawable/background_edit_text" />

        </android.support.design.widget.TextInputLayout>

        <!-- Edit text provided to write
            password (according to instagram UI)-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwd_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="12dp"
                android:singleLine="true"
                android:layout_marginTop="16dp"
                android:hint="@string/passwd"
                android:inputType="textPassword"
                android:background="@drawable/background_edit_text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <!-- material button is used to display the "Login" button to user-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:padding="12dp"
            android:onClick="login"
            android:backgroundTint="#3897f0"
            android:background="@drawable/rounded_button"/>

        <ProgressBar
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_progress" />

        <!-- Text view displaying the text
                "Forgot your login details?"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textSize="12sp"
            android:layout_marginTop="8dp"/>

        <!-- Linear layout to display the messgae
            OR using view so that it can be shown seperetly-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12sp"
            android:layout_gravity="center_vertical">

            <!-- to occupy the rectangular area in left side
                so that message can be displayed in center-->
            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#e2e2e2"/>

            <!-- textview displaying the message "OR"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#9a9a9a"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <!-- to occupy the rectangular area in right
                side so that message can be displayed in center-->
            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#e2e2e2"/>

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="registerPage"
            android:textAllCaps="false"
            android:elevation="0dp"
            android:id="@+id/btn_register_page"
            android:shadowColor="@color/white"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textColor="@color/blue"
            android:text="Don't have an account? Sign Up"
            android:textSize="15sp"/>



    </LinearLayout>



    <!-- text view to show the message
        "Dont have an account?Sign up-->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/sign_up"-->
<!--        android:text="@string/sign_up"-->
<!--        android:textSize="12sp"-->
<!--        android:textAlignment="center"-->
<!--        android:layout_marginBottom="14dp"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:gravity="center_horizontal" />-->

</RelativeLayout>
